Netlify branch deploy fix

--- a/public/labs/a2/index.html
+++ b/public/labs/a2/index.html
@@ -283,5 +283,7 @@
        <polygon points="100,10 40,198 190,78 10,78 160,198"
                 style="fill:lime; stroke:purple; stroke-width:5; fill-rule:evenodd;" />
     </svg>
-</body>
+
+  <!--Comment add to sort out Netlify branch deployments-->
+  </body>
 </html>
