--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" 
+      integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" 
+      crossorigin="anonymous">
     <title>React App</title>
   </head>
   <body>
@@ -31,6 +35,8 @@
     <ul>
       <li><a href="labs/a2/index.html">Assignment 2 Labs</a></li>
       <li><a href="tuiter/navigation.html">Tuiter</a></li>
+
+      <li><a href="labs/a3/index.html">Assignment 3 Labs</a></li>
     </ul>
   </body>
 </html>
