--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="../public/vendor/bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet"/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,10 +26,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" 
-      integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" 
-      crossorigin="anonymous">
     <title>React App</title>
   </head>
   <body>
@@ -37,6 +35,8 @@
       <li><a href="tuiter/navigation.html">Tuiter</a></li>
 
       <li><a href="labs/a3/index.html">Assignment 3 Labs</a></li>
+      <li><a href="labs/a4/index.html">Assignment 4 Labs</a></li>
+
     </ul>
   </body>
 </html>
