--- a/public/tuiter/explore/index.html
+++ b/public/tuiter/explore/index.html
@@ -1,67 +1,170 @@
 <!DOCTYPE html>
 
 <head>
-  <link href="index.css" rel="stylesheet"/>
+  <link href="../../vendor/bootstrap-5.1.3-dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" rel="stylesheet" />
 </head>
+
 <body>
-  <!-- <h1>Inside the new Explore Index Page</h1> -->
-
-  <div class="search-bar">
-    <input type="text" placeholder="Search Tuiter">
-
-    <div class="explore-link">
-      <a href="/explore-settings.html"><img src="../../gear-icon.png" alt="Gear Icon"></a>
-    </div>
-  </div>
-
-  <div class="links">
-      <a href="" id="selected">For You</a>
-      <a href="" id="">Trending</a>
-      <a href="" id="">Covid-19</a>
-      <a href="" id="">News</a>
-      <a href="" id="">Sports</a>
-      <a href="" id="">Entertainment</a>
-    </ul>
-  </div>
-
-  <div class="suggested">
-    <div class="suggested-item">
-      <h3>Trending in Science</h3>
-      <h1>Starship</h1>
-      <h3>55.5k Tuits</h3>
-    </div>
-
-    <div class="suggested-item">
-      <h3>Sports - Trending</h3>
-      <h1>Joe Rogan</h1>
-      <h3>5218 Tuits</h3>
-    </div>
-
-    <div class="suggest-author">
-      <div class="author-article">
-        <h3>The New York Times</h3>
-        <p>CNN's Cuomo conundrum, A star anchor with a brother in trouble.</p>
+  <div class="container">
+    <div class="row mt-2">
+      <div class="col-12 col-md-6 col-xl-2">
+        <div class="list-group">
+          <a href="#" class="list-group-item"><i class="fa-brands fa-twitter"></i></a>
+          <a href="../home.html" class="list-group-item list-group-item-action "><i class="fa fa-home"></i>
+            Home</a>
+          <a href="../home.html" class="list-group-item list-group-item-action active"><i class="fa fa-hashtag"></i>
+            Explore</a>
+          <a href="#" class="list-group-item list-group-item-action"><i class="fa fa-bell"></i>
+            Notifications</a>
+          <a href="#" class="list-group-item list-group-item-action"><i class="fa fa-envelope"></i>
+            Messages</a>
+          <a href="#" class="list-group-item list-group-item-action"><i class="fa fa-bookmark"></i>
+            Bookmarks</a>
+          <a href="#" class="list-group-item list-group-item-action"><i class="fa fa-list"></i>
+            Lists</a>
+          <a href="#" class="list-group-item list-group-item-action"><i class="fa fa-user"></i>
+            Profile</a>
+          <a href="#" class="list-group-item list-group-item-action"><i class="fa fa-circle-ellipsis"></i>
+            More</a>
+        </div>
+        <button type="button" class="btn btn-primary btn-block">Tweet</button>
       </div>
-      <img class="author-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/40/New_York_Times_logo_variation.jpg/300px-New_York_Times_logo_variation.jpg">
-    </div>
 
-    <div class="suggest-author">
-      <div class="author-article">
-        <h3>COVID-19: News and updates for Massachusetts</h3>>
+
+      <div class="col-12 col-md-6 col-xl-7">
+        <div class="form-group">
+          <input type="text" class="form-control rounded" placeholder="Search Tuiter" />
+        </div>
+
+        <div>
+          <ul class="nav nav-tabs">
+            <li class="nav-item">
+              <a class="nav-link active" href="for-you.html">For you</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="trending.html">Trending</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="news.html">News</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="sports.html">Sport</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="entertainment.html">Entertainment</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="card">
+          <img class="card-img"
+            src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse1.mm.bing.net%2Fth%3Fid%3DOIP.rePLnXyrMCM0I0mS5eCmWQHaE8%26pid%3DApi&f=1&ipt=8169f0984e2d931ec72fb2ad1e484b76c7000c3562da92fe3aed10bcbb68d269&ipo=images">
+          <div class="card-img-overlay d-flex flex-column">
+            <h2 class="card-title mt-auto text-light">SpaceX's Starship</h2>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="row card-body">
+            <div class="col-sm-8">
+              <p class="text-secondary">Web Development</p>
+              <p class="font-weight-bold">ReactJS <i class="fa fa-circle-check"></i> -2h</p>
+              <p class="font-weight-bold">React.js is a compoinent based front end livrary that makes it very easy to
+                build Single Page Applications of SPAs</p>
+            </div>
+            <img class="col-sm-4"
+              src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.vhv.rs%2Fdpng%2Fd%2F524-5245981_react-js-logo-png-transparent-png-download.png&f=1&nofb=1&ipt=61c75b3a77874b63c1626e16dec764750a9eaea2aa1f175a61139b6ea0586116&ipo=images">
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="row card-body">
+            <div class="col-sm-8">
+              <p class="font-weight-bold">JavaScript<i class="fa fa-circle-check"></i> -2h</p>
+              <p class="font-weight-bold">JavaScript is programming lanuage that can run on browsers as well as desktops
+              </p>
+            </div>
+            <img class="col-sm-4"
+              src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2F3.bp.blogspot.com%2F-PTty3CfTGnA%2FTpZOEjTQ_WI%2FAAAAAAAAAeo%2FKeKt_D5X2xo%2Fs1600%2Fjs.jpg&f=1&nofb=1&ipt=fcc5fda395c7f9c3c12459b6d84249001cc2727cc358de61a2213a12211a818a&ipo=images">
+            <p class="text-secondary">123k Tweets</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="row card-body">
+            <div class="col-sm-8">
+              <p class="text-secondary">Web Development</p>
+              <p class="font-weight-bold">jQuery</p>
+            </div>
+            <img class="col-sm-4"
+              src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fpluspng.com%2Fimg-png%2Fjquery-logo-png--800.gif&f=1&nofb=1&ipt=02c8dcd689ac206c34c22a9c046dae5803c8fc30e0108dc22b3731c1cea5309d&ipo=images ">
+            <p class="text-secondary">123k Tweets</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="row card-body">
+            <div class="col-sm-8">
+              <p class="text-secondary">Web Development</p>
+              <p class="font-weight-bold">NodeJS <i class="fa fa-circle-check"></i> -2h</p>
+            </div>
+            <img class="col-sm-4"
+              src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcdn.freebiesupply.com%2Flogos%2Flarge%2F2x%2Fnodejs-icon-logo-png-transparent.png&f=1&nofb=1&ipt=ea1e31c93929b1ed9e9833251696b5e7f45c126f9b8d5d42a0d3c6e58933ec8b&ipo=images">
+            <p class="text-secondary">123k Tweets</p>
+          </div>
+        </div>
+
       </div>
-      <img class="author-img" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fthumbs.dreamstime.com%2Fb%2Fblack-map-massachusetts-postal-code-abbreviation-black-white-silhouette-map-us-commonwealth-massachusetts-186766672.jpg&f=1&nofb=1&ipt=501d564c9e5d5aee5976d6a357b508bb2b3ca81736c04c71a5e1067b66079d3c&ipo=images">
-    </div>
+      <!--End of Center column-->
+      <div class="col-12 col-md-6 col-xl-3">
+        <ul class="list-group">
+          <li class="list-group-item d-flex justify-content-between align-items-center">Who to follow</li>
 
-    <div class="suggest-author">
-      <div class="author-article">
-        <h3>Bloomberg Opinion</h3>
-        <p>Thinking about getting a booster? Read this first.</p>
+
+          <li class="list-group-item d-flex justify-content-between align-items-center">
+            <div>
+              Java<i class="fa fa-circle-check"></i>
+              <p>@Java</p>
+            </div>
+            <span class="badge badge-primary badge-pill">Follow</span>
+          </li>
+
+          <li class="list-group-item d-flex justify-content-between align-items-center">
+            <div>
+              Relativity Space <i class="fa fa-circle-check"></i>
+              <p>@relativityspace</p>
+            </div>
+            <span class="badge badge-primary badge-pill">Follow</span>
+          </li>
+
+          <li class="list-group-item d-flex justify-content-between align-items-center">
+            <div>
+              Virgin Galactic <i class="fa fa-circle-check"></i>
+              <p>@virgingalactic</p>
+            </div>
+            <span class="badge badge-primary badge-pill">Follow</span>
+          </li>
+
+          <li class="list-group-item d-flex justify-content-between align-items-center">
+            <div>
+              NASA <i class="fa fa-circle-check"></i>
+              <p>@nasa</p>
+            </div>
+            <span class="badge badge-primary badge-pill">Follow</span>
+          </li>
+
+          <li class="list-group-item d-flex justify-content-between align-items-center">
+            <div>
+              Tesla <i class="fa fa-circle-check"></i>
+              <p>@tesla</p>
+            </div>
+            <span class="badge badge-primary badge-pill">Follow</span>
+          </li>
+        </ul>
       </div>
-      <img class="author-img" src="https://phil.cdc.gov//PHIL_Images/23312/23312_lores.jpg">
+      <!--End of third column-->
+
+
+
     </div>
-  </div>
-
-
-
 </body>
-
