--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,11 @@
 
       <li><a href="labs/a3/index.html">Assignment 3 Labs</a></li>
       <li><a href="labs/a4/index.html">Assignment 4 Labs</a></li>
+      <li><a href="labs/a5/index.html">Assignment 5 Labs</a></li>
+      <li><a href="labs/a5/todos/index.html">Assignment 5 Todos</a></li>
+
+
+      <li><a href="tuiter/HomeScreen/index.html">Assignment 5 Challenge</a></li>
 
     </ul>
   </body>
