--- a/public/tuiter/HomeScreen/index.html
+++ b/public/tuiter/HomeScreen/index.html
@@ -8,7 +8,7 @@
   <link href="index.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <meta charset="UTF-8">
-  <title>Explore Screen</title>
+  <title>Home Screen</title>
 </head>
 
 <body>
